feat: Issue 10 - Adjust coloring of lines for DiffViewer
Before I was highlighting lines with light green for added lines,
light red for removed lines and dark-green/dark-red/white cells for showing
the status coverage.

After this change we remove the first column for status coverage and now
only highlight added lines with light-green/light-red for status coverage.

--- a/src/style.css
+++ b/src/style.css
@@ -29,18 +29,15 @@ td.line_content, td.new_line_number, td.old_line_number {
 .diffblock {
 	width: 100%;
 }
-/* Row */
-.add { background-color:#b6fc88; }
-.del { background-color:#f9c8c5; }
 /* Line coverage status*/
 .hit, .miss, .nocovchange {
 	width: 20px;
 }
 .hit {
-	background-color:#8ec669;
+	background-color:#b6fc88;
 }
 .miss {
-	background-color:#cc1b12;
+	background-color:#f9c8c5;
 }
 .nocovchange {
 	background-color:#fff;
