feat: Preparative work to deprecate concept of push

--- a/src/style.css
+++ b/src/style.css
@@ -66,6 +66,6 @@ td.new_line_number, td.old_line_number {
 	color:#ff0000
 }
 /* Changesets */
-.collapsed_changeset {
+.hidden_changeset {
 	display: none
 }
