feat: Do not show changesets without coverage data

--- a/src/style.css
+++ b/src/style.css
@@ -65,3 +65,7 @@ td.new_line_number, td.old_line_number {
 .error_message {
 	color:#ff0000
 }
+/* Changesets */
+.hidden_changeset {
+	display: none
+}
