Issue #47 - Poll on an interval for csets with 'Pending' coverage status
Some pushes in mozilla-central do not yet have code coverage information.
The backend returns 202 for those pushes and we mark them as 'Pending'.
Once we have determined which csets don't have coverage data we can query
on an interval to see if anything has changed. We do this until
there are no csets with a backend response of 202.

Indicate if changesets are still being polled.

--- a/src/style.css
+++ b/src/style.css
@@ -69,3 +69,15 @@ td.new_line_number, td.old_line_number {
 .hidden_changeset {
 	display: none
 }
+
+/* Polling status */
+.polling-status {
+	/* Lemon yellow */
+	background-color: #fff44f; /* Fallback */
+	background-color: rgba(255, 244, 79, 0.3);
+	font-style: italic;
+	font-weight: 400;
+	margin: 0em 0em 1em;
+	padding: 1em;
+	text-align: center;
+}
