Addressing PR/#27 review feedback
1. Using 'forEach' function to iterate array
2. Store 'test' obj directly, rather than an index to it

--- a/src/style.css
+++ b/src/style.css
@@ -96,7 +96,7 @@ td.new_line_number, td.old_line_number {
 .file_line_text.selected {
 	border-style: solid;
   border-width: 2px;
-	border-color: LightGrey;
+	border-color: Grey;
 	padding: 0px;
 }
 
