style: Add Mozilla's theming and polish views
Based on https://mozilla.ninja/visualelements
and https://fonts.google.com/specimen/Fira+Sans

--- a/src/style.css
+++ b/src/style.css
@@ -1,45 +1,62 @@
+/*
+ *   CSS colours based on https://mozilla.ninja/visualelements/
+ */
 body {
-	font-family: sans-serif;
-	font-size: 12px;
-	margin:20px;
+	font-family: 'Fira Sans', sans-serif;
+	font-size: 14px;
+	font-weight: 300;
+	margin: 20px;
+	white-space: nowrap;
 }
+
+a {
+	color: #ff4f5e; /* Warm red */
+}
+
+/*
+ *  CSS for diff viewer
+ */
 /* XXX: The lines inside of pre overrun if the window is very little */
 pre { margin: 0; }
-table.diffblock, th.diffblock, tr.diffblock, td.diffblock {
-	border-collapse: collapse;
+.codecoverage-diffviewer table,th,tr,td {
+		border-collapse: collapse;
+		padding: 0px;
 }
-td.line_content, td.new_line_number, td.old_line_number {
-	border-right:1px solid #eaeaea;
-	color: #85878c;
-	padding: 1px;
+.diff-block {
+	border: 1px solid #eaeaea;
 }
-td.new_line_number, td.old_line_number {
-	text-align: right
+.diff-block-table {
+	margin: 0.5em;
 }
-.difffile {
-	border:1px solid #eaeaea;
+.diff-cell {
+	color: #959595; /* Dark grey */
+	padding: 0px 0.4em 0px 0px;
 }
-.filepath {
-	display: inline;
-}
-.filesummary, .diffblock, .difflineat {
-	border-bottom:1px solid #eaeaea;
-}
-.difflineat {
-	border-bottom:1px solid #eaeaea;
-	color:#990099;
-}
-.diffblock {
+.diff-file {
+	margin: 0em 0em 1em;
 	width: 100%;
+}
+.file-path {
+	color: white;
+	font-weight: bold;
+}
+.file-summary {
+	background-color: black;
+	padding: 0.8em;
+}
+.diff-line-at {
+	background-color: #959595; /* Dark grey */
+	font-weight: 400;
+	padding: 0.3em;
 }
 /* Diff viewer meta */
 .diff-meta, .net-coverage-meta, .parent-meta {
 	margin-bottom: 10px;
 }
 .net-lines-coverage-change {
+	display: block;
 	font-weight: bold;
 	font-size: 14px;
-	display: block;
 }
 /* Line coverage status*/
 .hit, .miss, .nocovchange {
@@ -55,22 +72,20 @@ td.new_line_number, td.old_line_number {
 	background-color:#fff;
 }
 /* Line numbers */
-.old_line_number,.new_line_number {
-	width: 25px;
-}
-.line_content {
-	border-right:0px;
-}
-/* Error messages */
-.error_message {
-	color:#ff0000
-}
-/* Changesets */
-.hidden_changeset {
-	display: none
+.old-line-number, .new-line-number {
+	text-align: right
 }
 
-/* Polling status */
+/*
+ *  CSS for main view
+ */
+.app-disclaimer {
+	background-color: #54ffbd;
+	background-color: rgba(84, 255, 189, 0.1);
+	font-style: italic;
+	margin: 0em 0em 1em;
+	padding: 1em;
+}
 .polling-status {
 	/* Lemon yellow */
 	background-color: #fff44f; /* Fallback */
@@ -79,5 +94,17 @@ td.new_line_number, td.old_line_number {
 	font-weight: 400;
 	margin: 0em 0em 1em;
 	padding: 1em;
+	text-align: center;
+}
+.changeset-viewer {
+	margin: auto;
+}
+.error-message {
+	color:#ff0000
+}
+.hidden-changeset {
+	display: none
+}
+.changeset-summary {
 	text-align: center;
 }
