--- a/src/style.css
+++ b/src/style.css
@@ -75,29 +75,54 @@ td.new_line_number, td.old_line_number {
 
 
 /* Styling for file view. TODO merge with app. */
-.file_line_number {
+table.file_viewer {
+	border-spacing: 0;
+	border-collapse: collapse;
+}
+
+tr.file_line {
+	height: 18px;
+	border-bottom: 2px solid transparent;
+}
+
+tr.file_line:hover {
+	background-color: LightGrey;
+	/*border-bottom: 2px solid LightGrey;*/
+}
+
+tr.selected {
+	border-bottom: 2px solid Grey;
+}
+
+tr.hit {
+	background-color: #dfd;
+}
+
+tr.miss {
+	background-color: #ffe5e5;
+}
+
+td.file_line_number, td.file_line_tests {
 	width: 40px;
 	border-right:1px solid #eaeaea;
-	color: #85878c;
+	color: Grey;
 	/*padding: 1px;*/
 }
 
-.file_line_text{
-	border-style: solid;
-	border-width: 2px;
-	border-color: transparent;
-	padding: 0px;
+td.file_line_text {
+	padding-left: 5px;
 }
 
-.file_line_text:hover {
-	background-color: LightGrey;
-}
-
-.file_line_text.selected {
-	border-style: solid;
-  border-width: 2px;
-	border-color: Grey;
-	padding: 0px;
+span.tests {
+	background: #21ba45;
+  border-radius: 10px;
+  color: #ffffff;
+	display: inline-block;
+  text-align: center;
+	font-size: 0.9em;
+	padding: 2px;
+	margin-left: 5px;
+	min-width: 12px;
 }
 
 /* file view right-siderbar */
