Use async methods instead of promises Refer to issue\#38
Save http requests failure info in appStatus, and show it on FileViewerMeta

--- a/src/style.css
+++ b/src/style.css
@@ -193,6 +193,9 @@ pre { margin: 0; }
 	font-weight: 400;
 	padding: 0.3em 0.8em;
 }
+.error_message {
+	color: red;
+}
 
 .file-view {
 	display: inline-block;
