inline coverage percentage and add lines covered out of total

--- a/src/style.css
+++ b/src/style.css
@@ -164,12 +164,16 @@ pre { margin: 0; }
 .file-meta-center {
 	background-color: #f5f9fa; /* Light blue */
 	overflow: hidden;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-left: 40px;
+	padding-right: 40px;
+	text-align: center;
 }
 .file-meta-status {
-	float: right;
 	border-bottom: 2px solid #3f87a6; /* Dark blue */
+	float: right;
 	margin-top: 15px;
-	margin-right: 40px;
 }
 .file-meta-ul {
 	float: right;
@@ -184,9 +188,9 @@ pre { margin: 0; }
 	font-weight: bold;
 }
 .file-meta-title {
+	float: left;
 	font-weight: bold;
 	font-size: 2rem;
-	padding: 40px 40px 10px;
 }
 .file-meta-revision {
 	background-color: #959595; /* Dark grey */
@@ -313,27 +317,21 @@ span.tests {
 }
 
 /* file view coverage percentage */
-div.coverage_meta {
-	position: fixed;
-	top:20px;
-	right: 320px;
+div.coverage_percentage_viewer {
+	display:inline-block;
+	margin: 0 40px;
 }
-div.coverage_meta_totals {
+div.coverage_percentage {
 	border: 1px solid #d4d4d5;
 	border-radius: 0.20rem;
-	padding-top: 1.0em;
-	padding-right: 0.3em;
-	padding-bottom: 1.0em;
-	padding-left: 0.3em;
-	float: right;
+	display: inline-block;
+	padding: 1.0em 0.3em;
+	text-align: center;
 }
-span.percentage_covered {
+span.coverage_percentage {
 	border-radius: 0.25rem;
 	color: rgb(0, 0, 0);
 	font-size: 1em;
-	padding-top: 0.6em;
-	padding-right: 0.8em;
-	padding-bottom: 0.6em;
-	padding-left: 0.8em;
+	padding: 0.6em 0.8em;
 	margin: 0.05em;
 }
