--- a/src/style.css
+++ b/src/style.css
@@ -176,7 +176,7 @@ pre { margin: 0; }
 	font-weight: 400;
 	padding: 0.3em 0.8em;
 }
-.error_message {
+.error-message {
 	color: red;
 }
 
@@ -191,24 +191,24 @@ pre { margin: 0; }
 	display: block;
 	margin-top: 10px;
 }
-tr.file_line {
+.file-line {
 	height: 18px;
 	border-bottom: 2px solid transparent;
 }
-tr.file_line:hover {
+.file-line:hover {
 	border-bottom: 2px solid #83d0f2; /* Sky blue */
 }
-tr.selected {
+.file-line.selected {
 	border-bottom: 2px solid #3f87a6 !important; /* Dark blue */
 }
-td.file_line_number, td.file_line_tests {
+td.file-line-number, td.file-line-tests {
 	width: 40px;
 	border-right:1px solid #eaeaea;
 	color: Grey;
 	text-align: center;
 	/*padding: 1px;*/
 }
-td.file_line_text {
+td.file-line-text {
 	padding-left: 5px;
 }
 span.tests {
@@ -223,7 +223,7 @@ span.tests {
 }
 
 /* file view right-siderbar */
-.tests_viewer {
+.tests-viewer {
 	position: fixed;
 	top: 0;
 	bottom: 0;
