--- a/src/style.css
+++ b/src/style.css
@@ -41,16 +41,21 @@ pre { margin: 0; }
 	display: flex;
 	flex-direction: column;
 	margin: 0em 0em 1em;
-	min-width: 530px;
-	max-width: 600px;
+}
+.meta-footer {
+	display: flex;
+	justify-content: space-around;
+	width: 20%;
+	min-width: 320px;
+	margin: auto;
+}
+.meta-footer a{
+	color: gray;
+	font-size:0.75em;
 }
 .coverage-meta-row {
 	display: flex;
 	justify-content: space-between;
-}
-.parent-meta-subtitle {
-	font-weight: 400;
-	text-align: left;
 }
 .meta {
 	flex-direction: row;
