--- a/src/style.css
+++ b/src/style.css
@@ -120,6 +120,21 @@ pre { margin: 0; }
 	margin: 0em 0em 1em;
 	padding: 1em;
 }
+
+.coverage-legend {
+	text-align: right;
+	margin: 0em 0em 1em;
+	padding: 1em;
+}
+
+.coverage-color-divs{
+	border: solid 1px black;
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+	vertical-align: bottom;
+}
+
 .polling-status {
 	/* Lemon yellow */
 	background-color: #fff44f; /* Fallback */
