--- a/src/style.css
+++ b/src/style.css
@@ -87,6 +87,10 @@ pre { margin: 0; }
 .diff-meta, .net-coverage-meta, .parent-meta {
 	margin-bottom: 10px;
 }
+.diff-viewer-link {
+	color: white;
+	font-weight: 100;
+}
 .net-lines-coverage-change {
 	display: block;
 	font-weight: bold;
