Links to Hg added
Changeset links redirect to Hg, clicking on each row redirects to DiffViewer.

--- a/src/style.css
+++ b/src/style.css
@@ -150,6 +150,11 @@ pre { margin: 0; }
 	display: none
 }
 
+.changeset:hover td {
+	cursor: pointer;
+	background-color: #cce6ff;
+}
+
 .changeset-summary {
 	text-align: center;
 }
