Issue #99 - Summary Viewer: modify appearance of changeset description

--- a/src/style.css
+++ b/src/style.css
@@ -145,12 +145,13 @@ pre { margin: 0; }
 .hidden-changeset {
 	display: none
 }
-
+.changeset-description {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
 .changeset-summary {
 	text-align: center;
-}
-.bzIcon {
-	float: right;
 }
 .low-coverage {
 	/* Warm red */
