Issue #99: SummaryViewer: modify appearance of changeset description (#118)

--- a/src/style.css
+++ b/src/style.css
@@ -149,7 +149,11 @@ pre { margin: 0; }
 .hidden-changeset {
 	display: none
 }
-
+.changeset-description {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
 .changeset-summary {
 	text-align: center;
 }
