Issue #107: Changeset to link to Hg
Changeset links now redirect to Hg. Clicking on a row redirects to that changeset's DiffViewer.

--- a/src/style.css
+++ b/src/style.css
@@ -149,6 +149,10 @@ pre { margin: 0; }
 .hidden-changeset {
 	display: none
 }
+.changeset:hover td {
+	cursor: pointer;
+	background-color: #cce6ff;
+}
 .changeset-description {
 	display: flex;
 	flex-direction: row;
