--- a/src/style.css
+++ b/src/style.css
@@ -149,9 +149,12 @@ pre { margin: 0; }
 .hidden-changeset {
 	display: none
 }
+.changeset:hover td {
+	cursor: pointer;
+	background-color: #cce6ff;
+}
 .changeset-description {
 	display: flex;
-	flex-direction: row;
 	justify-content: space-between;
 }
 .changeset-summary {
