--- a/src/style.css
+++ b/src/style.css
@@ -125,7 +125,7 @@ pre { margin: 0; }
 	padding: 1em;
 }
 .bzIcon {
-	margin-right: 5px;
+	margin-right: 0.2em;
 }
 .polling-status {
 	/* Lemon yellow */
@@ -378,8 +378,4 @@ span.tests {
 	top: 0;
 	right: 0;
 	border: 0;
-}
-
-.bzIcon {
-	padding: 0 0.3em 0 0.3em;
 }
