Issue #57 - Allow sorting changesets per coverage score
Add mdi-react dependency.

--- a/src/style.css
+++ b/src/style.css
@@ -150,6 +150,10 @@ tr.changeset td{
 .loading {
 	text-align: center;
 }
+.mdi-icon {
+	height: 1em;
+	vertical-align: middle;
+}
 
 /* Changesets */
 .hidden-changeset {
