Issue #56 - Allow filtering by changeset's description
This is useful if you want to see changesets associated to the
same bug.

--- a/src/style.css
+++ b/src/style.css
@@ -158,6 +158,13 @@ tr.changeset td{
 	vertical-align: middle;
 }
 
+form:not(:focus-within) {
+	opacity: 0;
+}
+form:focus-within + button {
+	display: none;
+}
+
 /* Changesets */
 .hidden-changeset {
 	display: none
